--- a/PSS/PSS/Pages/UploadApply.razor
+++ b/PSS/PSS/Pages/UploadApply.razor
@@ -21,7 +21,8 @@
         <span class="material-icons-outlined">@(collectionSelectorVis == "visible" ? "image_not_supported" : "image")</span><span>@(collectionSelectorVis == "visible" ? "Hide Collections" : "Show Collections")</span>
     </button>
 
-    <span id="statusSpan">@status</span>
+    <span style="display: @statusDisplay" id="statusSpan">@status</span>
+    <progress style="display: @progressDisplay" max="@progressMax" value="@progressValue"></progress>
 </header>
 
 <div id="filter" style="visibility: @filterVis">
@@ -38,6 +39,7 @@
 <KeyboardShortcuts AltA="@AddItemsBtnClick" AltC="@(() => { F.VisToggle(ref collectionSelectorVis); StateHasChanged(); })" AltF="@(() => { F.VisToggle(ref filterVis); StateHasChanged(); })" CtrlD="@DeleteErrors" />
 <ShortcutsReference AltAText="Add Items to Library and Album(s)/Folder" AltCText="Show/Hide CollectionSelector" AltFText="Show/Hide Filter" CtrlDText="Delete All Items with Errors"/>
 
+<ProgressPopUp Message="Adding Items to Library..." Height="400" Width="400" Visible="@popupVisible"/>
 @{
     GC.Collect();
     GC.WaitForPendingFinalizers();
@@ -57,7 +59,7 @@
                 <img title="Click for Full Size Preview" onclick="window.open('@allFiles[i].shortPath', '_blank').focus();" src=@(allFiles[i].thumbnail == null ? allFiles[i].shortPath : "data:image/jpg;base64," + allFiles[i].thumbnail) alt="" loading="lazy"/>
                 <input class="filename" @bind="@allFiles[ii].filename"/>
                 <span title="@dateString" class="dateTakenSpan">@dateString</span>
-                                                                           
+
                 if (allFiles[i].dateTaken == null && !allFiles[i].alreadyInLib){<span class="warnSpan">Unknown Date Taken</span>}
                 if (!allFiles[i].alreadyInLib){<input title="Choose New Date Taken" type="datetime-local" @bind="@allFiles[ii].dateTaken" @bind:event="oninput" @onchange="@UpdateStatus" step="1">}
                 if (infoChecked){<span class="infoSpan">@($"DT Source: {allFiles[i].dateTakenSrc}")</span>}
@@ -79,7 +81,9 @@
     private static List<C.UploadFile> allFiles;
 
     private static string status;
-    private static string promptVis, addItemsPromptVis;
+    private static int progressValue, progressMax;
+    private static bool popupVisible;
+    private static string statusDisplay, progressDisplay, promptVis, addItemsPromptVis;
     private static string message;
     
     //Filtering
@@ -96,7 +100,15 @@
         allGuids = new List<Guid>();
         allFullPaths = F.GetSupportedFiles(S.uploadFolderPath);
         allFiles = new List<C.UploadFile>(allFullPaths.Count);
-
+        status = "";
+        progressValue = progressMax = 0;
+        popupVisible = false;
+        statusDisplay = "inline";
+        progressDisplay = "none";
+        promptVis = addItemsPromptVis = filterVis = collectionSelectorVis = "hidden";
+        neitherChecked = warningChecked = errorChecked = false;
+        infoChecked = true;
+        
         Parallel.ForEach(allFullPaths, fullPath => 
         {
             C.UploadFile file = new()
@@ -111,10 +123,7 @@
             file.alreadyInLib = ItemInLibrary(file.dateTaken, Path.GetFileName(fullPath));
             allFiles.Add(file);
         });
-    
-        promptVis = addItemsPromptVis = filterVis = collectionSelectorVis ="hidden";
-        neitherChecked = warningChecked = errorChecked = false;
-        infoChecked = true;
+        
         UpdateStatus();
     }
 }
@@ -152,6 +161,11 @@
     private async Task AddItems()
     {
         int rowsAffected = 0;
+        progressMax = allFiles.Count;
+        popupVisible = true;
+        progressDisplay = "inline";
+        statusDisplay = "none";
+        StateHasChanged();
         
         await Parallel.ForEachAsync(allFiles.ToList(), async (file, _) =>
         {
@@ -170,6 +184,7 @@
                 await Task.Run(() => File.Move(file.fullPath!, fullFinalPath), _);
                 rowsAffected += await C.InsertMedia(newShortPath, file.dateTaken, file.uuid, file.thumbnail);
                 await Task.Run(() => D.UpdateDateTaken(fullFinalPath, file.dateTaken), _);
+                progressValue++;
             }
             catch (IOException e)
             {
@@ -178,8 +193,12 @@
         });
         
         collectionSelector.ConfirmBtnClick();
-        status = $"Added {rowsAffected} items to library";
-        allFiles.Clear();
+        progressDisplay = "none";
+        statusDisplay = "inline";
+        popupVisible = false;
         collectionSelectorVis = "hidden";
+        status = $"Added {rowsAffected} items to library";
+        StateHasChanged();
+        allFiles.Clear();
     }
 }
