--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -54,6 +54,7 @@
     <div>
         <span class="header">Maintenance</span>
         <button class="textBtn" title="Create and Restore Backups of PSS"><span class="material-icons-outlined">restore</span><a href="maintenance/backups">Backups</a></button>
+        <button class="textBtn" @onclick="@(() => System.Diagnostics.Process.Start("shutdown.exe", "-r -t 0"))"><span class="material-icons-outlined">restart_alt</span><span>Restart Server</span></button>
         <button class="textBtn" @onclick="@(() => { Directory.Delete(S.tmpFolderPath, true); Directory.CreateDirectory(S.tmpFolderPath); })"><span class="material-icons-outlined">folder_delete</span><span>Clear pss_tmp</span></button>
         <button title="Clear pss_tmp and Empty Trash" class="textBtn" @onclick="@FreeUpSpace"><span class="material-icons-outlined">folder_delete</span><span>Free Up Space</span></button>
         @if (!maintenanceLoaded)
