UA and GPO Import now share the same CSS file

--- a/PSS/PSS/Pages/ImportGPOFolder.razor
+++ b/PSS/PSS/Pages/ImportGPOFolder.razor
@@ -2,7 +2,7 @@
 @using Microsoft.VisualBasic.FileIO
 
 <title>GPO Import - PSS</title>
-<link href="css/ImportGPOFolder.css" rel="stylesheet">
+<link href="css/UploadApply.css" rel="stylesheet">
 
 <header>
     <button class="textBtn" @onclick="@(() => F.VisToggle(ref filterVis))" title="This filter thing sucks I know but how it works is check neither, warning, or error (just 1 at a time) to show just those items">
