--- a/PSS/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/PSS/wwwroot/css/UploadApply.css
@@ -23,7 +23,7 @@ header > button {
 #filter {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     left: var(--left-margin);
     z-index: 9999;
     background-color: black;
