--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -28,40 +28,46 @@ If it can't find any content, it shows an h1 saying no content.
 	</div>
 
 	<div id="infoDiv" style="visibility: @infoVis">
-	    <div class="dataDiv" title="Date Taken">
-	        <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
-	        <span>@(MediaList[viewIndex].dateTaken == null ? "No Date Taken" : MediaList[viewIndex].dateTaken?.ToString("ddd, MMM d, yyyy h:mm:ss tt"))</span>
-	        <button class="iconBtn" @onclick="@(() => editDateDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
-	    </div>
-	    
-	    <div class="dataDiv" title="Date Added">
-	        <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
-	        <span>@MediaList[viewIndex].dateAdded.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
-	    </div>
+		<div id="itemInfo">
+			<div class="dataDiv" title="Date Taken">
+				<svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
+				<span>@(MediaList[viewIndex].dateTaken == null ? "No Date Taken" : MediaList[viewIndex].dateTaken?.ToString("ddd, MMM d, yyyy h:mm:ss tt"))</span>
+				<button class="iconBtn" @onclick="@(() => editDateDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
+			</div>
 
-	    <div class="dataDiv">
-	        <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-5-7l-3 3.72L9 13l-3 4h12l-4-5z"></path></svg>
-	        <span id="filenameInput">@Path.GetFileName(MediaList[viewIndex].path)</span>
-	        <button class="iconBtn" @onclick="@(() => editFilenameDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
-	    </div>
-	    
-	    @if (collectionsIn != null && collectionsIn.Count > 0)
-	    {
-	        <span id="collectionsText">Collections Containing</span>
-	        <div id="collectionsIn">
-	            @foreach (C.Collection collection in collectionsIn)
-	            {
-	                <a href="/collection-view/@collection.id">
-	                    <div class="collection">
-	                        <div class="coverDiv">
-	                            <img class="cover" src="@S.LIB_REQUEST_PATH/@collection.cover" alt="">
-	                        </div>
-	                        <span title="@collection.name">@collection.name</span>
-	                    </div>
-	                </a>
-	            }
-	        </div>
-	    }
+			<div class="dataDiv" title="Date Added">
+				<svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
+				<span>@MediaList[viewIndex].dateAdded.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
+			</div>
+
+			<div class="dataDiv">
+				<svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-5-7l-3 3.72L9 13l-3 4h12l-4-5z"></path></svg>
+				<span id="filenameInput">@Path.GetFileName(MediaList[viewIndex].path)</span>
+				<button class="iconBtn" @onclick="@(() => editFilenameDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
+			</div>
+
+			<textarea @bind="@itemDescription" @onfocusout="@UpdateDescription" autocomplete="off" autocorrect="on" placeholder="Enter a description for this item." spellcheck="true"></textarea>
+		</div>
+
+		@if (collectionsIn != null && collectionsIn.Count > 0)
+		{
+			<div id="collectionsInfo">
+				<span id="collectionsText">Collections Containing</span>
+				<div id="collectionsIn">
+					@foreach (C.Collection collection in collectionsIn)
+					{
+						<a href="/collection-view/@collection.id">
+							<div class="collection">
+								<div class="coverDiv">
+									<img class="cover" src="@S.LIB_REQUEST_PATH/@collection.cover" alt="">
+								</div>
+								<span title="@collection.name">@collection.name</span>
+							</div>
+						</a>
+					}
+				</div>
+			</div>
+		}
 	</div>
 
 	<div class="inputBox" style="visibility: @editDateDivVis">
@@ -303,6 +309,7 @@ else
 
 	private static DateTime? newDateTaken;
 	private static string newFilename, editFilenameDivVis, filenameErrorVis, editDateDivVis, dtErrorVis, infoVis, downloadDivVis;
+	private static string itemDescription;
 	private static List<C.Collection> collectionsIn;
 }
 
@@ -334,6 +341,8 @@ else
 		
 		infoVis = dtErrorVis = editDateDivVis = editFilenameDivVis = filenameErrorVis = downloadDivVis = "hidden";
 		viewIndex = 0;
+
+		itemDescription = "";
 	}
 	
 	///Modifies a checkmark's CSS class to show if checked/unchecked, and adds/removes the uuid from SelectedItems.
@@ -492,6 +501,16 @@ else
 		C.UpdateStarred(MediaList[viewIndex].uuid, MediaList[viewIndex].starred);
 	}
 
+	///Called when description textarea's focus is lost. Updates the item's description, if it's been updated.
+	private void UpdateDescription()
+	{
+		if (MediaList[viewIndex].description != itemDescription)
+		{
+			MediaList[viewIndex].description = itemDescription;
+			C.UpdateDescription(_selectedItem, itemDescription);
+		}
+	}
+
 	///Deletes all selected items.
 	private async void DeleteSelected()
 	{
@@ -586,6 +605,7 @@ else
 		newDateTaken = MediaList[viewIndex].dateTaken;
 		newFilename = Path.GetFileNameWithoutExtension(MediaList[viewIndex].path);
 		collectionsIn = C.GetCollectionsContaining(SelectedItem);
+		itemDescription = MediaList[viewIndex].description;
 	}
 
 	private void UpdateDateTaken()
