--- a/PSS/PSS/wwwroot/css/components/ViewItem.css
+++ b/PSS/PSS/wwwroot/css/components/ViewItem.css
@@ -35,11 +35,16 @@
     position: absolute;
     z-index: 999;
     top: 56px;
-    right: 60px;
+    right: 75px;
+}
+
+#viewDiv > #infoDiv > #itemInfo {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 /* 3 divs for date taken/added, and filename */
-#viewDiv > #infoDiv > .dataDiv {
+#viewDiv > #infoDiv > #itemInfo > .dataDiv {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -47,21 +52,31 @@
     height: 55px;
 }
 
-#viewDiv > #infoDiv > .dataDiv > svg {
-    margin-left: 15px;
+#viewDiv > #infoDiv > #itemInfo > .dataDiv > svg {
     margin-right: 15px;
 }
 
-#viewDiv > #infoDiv > .dataDiv > span {
+#viewDiv > #infoDiv > #itemInfo > .dataDiv > span {
     margin-right: 5px;
 }
 
-#viewDiv > #infoDiv > #collectionsText {
-    margin-left: 18px;
+#viewDiv > #infoDiv > #itemInfo > textarea {
+    resize: none;
+    background-color: black;
+    border: 1px solid white;
+    margin-bottom: 12px;
+    width: available;
+    width: -moz-available;
+    height: 100px;
+}
+
+#viewDiv > #infoDiv > #collectionsInfo > #collectionsText {
+    margin-left: 15px;
+    display: block;
 }
 
 /* Showing collections this item is in */
-#viewDiv > #infoDiv > #collectionsIn {
+#viewDiv > #infoDiv > #collectionsInfo > #collectionsIn {
     border: 1px solid white;
     padding-right: 2px;
     margin-top: 12px;
