Add buttons to CollectionSelector

--- a/PSS/PSS/Shared/CollectionSelector.razor
+++ b/PSS/PSS/Shared/CollectionSelector.razor
@@ -17,6 +17,14 @@
         
         <div id="collectionCreatorDiv"><CollectionCreator Collections="@(albums.Concat(folders).ToList())"/></div>
 
+        <div id="collectionGroups">
+            <button class="iconBtn"><span class="material-icons-outlined">history</span></button>
+            <button class="iconBtn"><span class="material-icons-outlined">save</span></button>
+            <button class="iconBtn"><span class="material-icons-outlined">save</span></button>
+            <button class="iconBtn"><span class="material-icons-outlined">save</span></button>
+            <button class="iconBtn"><span class="material-icons-outlined">save</span></button>
+        </div>
+        
         <div class="collections">
             <span>Albums</span>
             <div class="collectionsList">
